force-app/main/default/objects/KimbleOne__ProductGroupProduct__c/KimbleOne__ProductGroupProduct__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Product Group Product</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ProductGroupProduct Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Group Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>