force-app/main/default/objects/KimbleOne__ProductGroupProduct__c/fields/KimbleOne__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>