force-app/main/default/objects/KimbleOne__ProductGroupProduct__c/fields/KimbleOne__Product__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Product__c</fullName>
    <label>Product</label>
    <referenceTo>KimbleOne__Product__c</referenceTo>
    <relationshipLabel>Product Group Products</relationshipLabel>
    <relationshipName>ProductGroupProducts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>