force-app/main/default/objects/KimbleOne__ProductGroupProduct__c/fields/KimbleOne__ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductGroup__c</fullName>
    <label>Product Group</label>
    <referenceTo>KimbleOne__ProductGroup__c</referenceTo>
    <relationshipLabel>Product Group Products</relationshipLabel>
    <relationshipName>ProductGroupProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>